<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Actiivties.LogInActivity">
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     android:textSize="20sp"
     android:textColor="@color/white_color"
     android:layout_margin="10dp"
     android:id="@+id/text"
     android:text="@string/login_text"/>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="vertical"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"

     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/text">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginTop="10dp"

      android:background="@drawable/edittext_border"
      android:textColorHint="#fff"
      android:theme="@style/Widget.Design.TextInputLayout">

   <com.google.android.material.textfield.TextInputEditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/email_hint"
       android:textColor="#fff" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"


      android:background="@drawable/edittext_border"
      android:textColorHint="#fff"
      android:theme="@style/Widget.Design.TextInputLayout"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email_layout">

   <com.google.android.material.textfield.TextInputEditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/passwordd_hint"
       android:textColor="#fff" />


  </com.google.android.material.textfield.TextInputLayout>


  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:id="@+id/admin_login_btn"
      android:background="@drawable/edittext_border"
      android:backgroundTint="@color/button_tintcoler"
      android:elevation="20dp"
      android:padding="8dp"
      android:visibility="gone"
      android:text="@string/admin_login"
      android:textColor="#fff"
      android:textSize="20sp" />
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:id="@+id/student_login_btn"
      android:background="@drawable/edittext_border"
      android:backgroundTint="@color/button_tintcoler"
      android:elevation="20dp"
      android:padding="8dp"
      android:text="@string/student_login"
      android:textColor="#fff"
      android:textSize="20sp" />

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:id="@+id/teacher_login_btn"
      android:background="@drawable/edittext_border"
      android:backgroundTint="@color/button_tintcoler"
      android:elevation="20dp"
      android:padding="8dp"
      android:visibility="gone"
      android:text="@string/teacher_login"
      android:textColor="#fff"
      android:textSize="20sp" />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

  >
   <TextView
       android:layout_width="wrap_content"
      android:id="@+id/admint_text"
       android:layout_height="wrap_content"
       android:textColor="#fff"

    android:text="@string/i_am_admin"/>
   <TextView
       android:layout_width="wrap_content"
       android:id="@+id/prev_text"
       android:layout_height="wrap_content"
       android:textColor="#fff"
           android:visibility="gone"
       android:text="@string/am_not"/>

   <TextView
    android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="#fff"
       android:visibility="gone"
       android:id="@+id/teacher_text"
       android:layout_alignParentEnd="true"
       android:layout_marginEnd="10dp"
       android:text="@string/i_am_teacher"/>
   <TextView
     android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="#fff"
       android:id="@+id/student_text"
       android:layout_marginEnd="10dp"
       android:layout_alignParentEnd="true"
       android:visibility="visible"
       android:text="@string/i_am_student"/>


  </RelativeLayout>

 </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>