<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Trainer_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/profitle_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:weightSum="10">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_marginTop="8dp"
            android:layout_height="120dp"
            android:src="@drawable/arebic"
            app:civ_border_width="2dp"
            app:civ_border_color="#fff"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_name"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/student_name_profile"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_skills"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/student_email_profile"
                android:textColor="#fff"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classes_text"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/calss_goint_text"
        app:layout_constraintTop_toBottomOf="@+id/profitle_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/student_class_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calss_goint_text"
        app:layout_constraintVertical_bias="0.234" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white_color"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
               android:visibility="visible"
          android:id="@+id/timing_layout"


            android:textColorHint="@color/colorPrimary"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/timeing_text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/backgroundColor"
                android:textColorHighlight="@color/backgroundColor"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:background="@color/backgroundColor"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/assign_class_teacher_btn"
                android:background="@color/backgroundColor">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/check_go"
                    android:textColor="@color/white_color" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>